fix: inline code is not align

--- a/src/app/posts/[...slug]/styles/md.css
+++ b/src/app/posts/[...slug]/styles/md.css
@@ -75,9 +75,10 @@
   /* Code */
   code {
     display: inline-block;
+    line-height: 1;
     font-size: var(--text-sm);
     font-weight: 500;
-    padding: 2px 6px;
+    padding: 4px 6px;
     border-radius: 4px;
     color: var(--c-indigo-1);
     background-color: var(--c-indigo-soft);
@@ -150,7 +151,6 @@
     color: var(--text-1);
     overflow: auto;
     tab-size: 2;
-    line-height: 1.6;
     height: 100%;
     max-height: 60vh;
     border-radius: var(--pre-radius);
@@ -159,6 +159,7 @@
 
     code {
       display: block;
+      line-height: 1.6;
       font-weight: 400;
       padding: 0;
       color: inherit;
